需要思考picitem到底是包含一个QPixmapGraphicsItem还是继承这个类

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.5)
 
 project(towerDefence LANGUAGES CXX)
 
+set(CMAKE_CXX_FLAGS "-g -O0 -fno-inline" )  
+
 set(CMAKE_EXPORT_COMPILECOMMANDS ON)
 set(CMAKE_PREFIX_PATH /home/corporal/cmake)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
